[package]
name = "tauri-plugin-clipboard-x"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-clipboard-x"

[dependencies]
tauri = { version = "2" }
serde = "1"
thiserror = "2"
clipboard-rs = "0.2"
lazy_static = "1"
fs_extra = "1"
twox-hash = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
